--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "16.14.2"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.0"
